syntax = "proto3";

package rivet.backend.pkg.cf_custom_hostname.resolve_hostname;

import "proto/common.proto";

message Request {
    repeated string hostnames = 1;
}

message Response {
    message CustomHostname {
        string hostname = 1;
        rivet.common.Uuid identifier = 2;
    }

    repeated CustomHostname custom_hostnames = 1;
}
